--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <h1>Know how a Reverse Mortgage works before you buy</h1>
         <img src="your-hud-image.jpg" alt="HUD Reverse Mortgage Guide" width="100%">
         <p>Fill out the form below to learn more!</p>
-        <form class="contact-form">
-            <input type="text" placeholder="First Name" required>
-            <input type="text" placeholder="Last Name" required>
-            <input type="email" placeholder="Email Address" required>
+        <form action="https://formsubmit.co/emoda@yahoo.com" method="POST">
+            <input type="text" name="First Name" placeholder="First Name" required>
+            <input type="text" name="Last Name" placeholder="Last Name" required>
+            <input type="email" name="Email" placeholder="Email Address" required>
             <button type="submit">Get More Info</button>
         </form>
     </div>
