--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Know how a Reverse Mortgage works before you buy</h1>
         <img src="your-hud-image.jpg" alt="HUD Reverse Mortgage Guide" width="100%">
         <p>Fill out the form below to learn more!</p>
-        <form action="https://formsubmit.co/emoda@yahoo.com" method="POST">
+        <form action="https://formsubmit.co/bb173679c253eefa08f2323e42a39610" method="POST">
             <input type="text" name="First Name" placeholder="First Name" required>
             <input type="text" name="Last Name" placeholder="Last Name" required>
             <input type="email" name="Email" placeholder="Email Address" required>
