--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
-moda<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How Not to Get Screwed on Your Reverse Mortgage</title>
+    <meta name="description" content="Helping seniors make informed decisions about reverse mortgages. Learn how to use home equity wisely.">
+    <title>Reverse Mortgage Solutions</title>
     <style>
-        body {
-            background-color: #121212;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-        }
-        .container {
-            max-width: 600px;
-            margin: auto;
-            padding: 20px;
-            background-color: #1e1e1e;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-        }
-        h1 {
-            color: #ffcc00;
-        }
-        .contact-form {
-            display: flex;
-            flex-direction: column;
-        }
-        input, button {
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            font-size: 16px;
-        }
-        input {
-            background-color: #333;
-            color: #fff;
-        }
-        button {
-            background-color: #ffcc00;
-            color: #121212;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #e6b800;
-        }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        header { background: #003366; color: white; padding: 20px; text-align: center; }
+        nav { background: #f4f4f4; padding: 10px; text-align: center; }
+        nav a { margin: 0 15px; text-decoration: none; color: #003366; }
+        section { padding: 20px; }
+        footer { background: #003366; color: white; text-align: center; padding: 10px; }
+        form { max-width: 500px; margin: auto; }
+        input, textarea { width: 100%; padding: 10px; margin: 5px 0; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Know how a Reverse Mortgage works before you buy</h1>
-        <img src="your-hud-image.jpg" alt="HUD Reverse Mortgage Guide" width="100%">
-        <p>Fill out the form below to learn more!</p>
-        <form action="https://formsubmit.co/emoda@yahoo.com" method="POST">
-            <input type="text" name="First Name" placeholder="First Name" required>
-            <input type="text" name="Last Name" placeholder="Last Name" required>
-            <input type="email" name="Email" placeholder="Email Address" required>
-            <button type="submit">Get More Info</button>
+    <header>
+        <h1>Reverse Mortgage Solutions</h1>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#faq">FAQ</a>
+        <a href="#blog">Blog</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <section id="home">
+        <h2>Welcome to Reverse Mortgage Solutions</h2>
+        <p>We help seniors make informed decisions about reverse mortgages.</p>
+    </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>With years of experience in the mortgage industry, we specialize in helping homeowners understand reverse mortgages.</p>
+    </section>
+    <section id="services">
+        <h2>Our Services</h2>
+        <p>We provide consultations and guidance on reverse mortgage options.</p>
+    </section>
+    <section id="faq">
+        <h2>Frequently Asked Questions</h2>
+        <p>Answers to common questions about reverse mortgages.</p>
+    </section>
+    <section id="blog">
+        <h2>Our Blog</h2>
+        <p>Stay informed with the latest insights on reverse mortgages.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="text" name="address" placeholder="Your Address" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Submit</button>
         </form>
-    </div>
+    </section>
+    <footer>
+        <p>&copy; 2025 Reverse Mortgage Solutions | Follow us on <a href="#">Social Media</a></p>
+    </footer>
 </body>
 </html>
